# barrique

./: CRATE_README.md  Cargo.toml  README.md  SPEC
.github/workflows/: ci.yml
derive/: Cargo.toml  README.md
derive/src/: lib.rs  tuple_drop_guard.rs
derive/src/decode/: enum_.rs  mod.rs  struct_.rs
derive/src/encode/: enum_.rs  mod.rs  struct_.rs
src/: cursor.rs  decode.rs  encode.rs  frame.rs  lib.rs  region.rs
src/impl/: alloc.rs  mod.rs  seq.rs  tuple.rs
src/lz4/: mod.rs
