[package]
name = "barrique"
description = "Portable binary serialiation format"
version = "1.0.2"
edition = "2021"
repository = "https://github.com/rockstorm-io/barrique"
readme = "CRATE_README.md"
license = "GPL-3.0-or-later"
categories = ["encoding"]
keywords = ["binary", "serialize", "deserialize"]

[dependencies]
barrique_derive = { version = "0.1.1", path = "derive" }
thiserror = "2.0.17"
twox-hash = "2.1.2"
lz4-sys = "1.11.0"

[features]
default = ["std"]
derive = []
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "-D", "warnings"]

[workspace]
members = ["derive"]